cd/backend-api-k8s-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: backend-api
        image: 1wolfalone1/mealsync-api:latest
        imagePullPolicy: Always  # Ensures the image is always pulled from the registry
        ports:
        - containerPort: 8080
