cd/backend-api-k8s-yaml/service-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 80      # Service port (inside the cluster)
    targetPort: 80 # Container port
  sessionAffinity: None
